# image_optimizer

./: .gitignore  Cargo.toml  README.md  rimage.md
src/: lib.rs  main.rs
test_images/10/processed/: 10 (2).avif  10-001 (2).avif  10-001.avif  10-002.avif  10.avif
test_images/11/processed/: 11 (2).avif  11-001 (2).avif  11-001.avif  11-002 (2).avif  11-002.avif  11-003 (2).avif  11-003.avif  11-004.avif  11-005.avif  11.avif
