[package]
name = "image_optimizer"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_optimizer"
path = "src/lib.rs"

[[bin]]
name = "image_optimizer"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "mimalloc"]

[dependencies]
# CLI
mimalloc = { version = "0.1", features = ["v3"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

rimage = { git = "https://github.com/SalOne22/rimage", branch = "main", default-features = false, features = ["avif", "resize", "threads"] }
zune-image = { version = "0.5.0-rc0", default-features = false, features = ["simd", "threads", "jpeg", "png", "metadata"] }
zune-imageprocs = "0.5.0-rc0"
zune-core = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
